# cmake_learning

cmake_project/: CMakeLists.txt
cmake_project/include/: functions.h
test_project/: build_link.sh  functions.c  main.c
